# ai-daily-brief-rss

./: .gitignore  README.md  main.py  pyproject.toml
data/: sources.json
data/ai_news/: latest.json
deploy/: ai-daily-brief.cron  ai-daily-brief.service
docs/: ai-news-archive.html  ai-news.html  index.html
docs/archive/: 2026-05-03.json  2026-05-05.json  2026-05-06.json  2026-05-07.json  2026-05-08.json  2026-05-09.json  2026-05-10.json  2026-05-11.json  2026-05-17.json  2026-06-13.json  2026-06-14.json  2026-06-15.json  2026-06-16.json  2026-06-24.json  index.json
docs/assets/css/: ai-news.css
docs/assets/data/: ai-news.json  source-health.json
docs/assets/js/: ai-news.js
scripts/: deploy_server.sh  run_daily.sh  send_daily_notification.sh  serve_static.sh
src/: domestic_ai_news.py  main.py  notifier.py  page_generator.py
tests/: test_domestic_ai_news.py
